--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-highcharts": "^16.0.0",
     "chart.js": "^4.4.3",
     "json-server": "^1.0.0-beta.0",
     "rxjs": "~7.8.0",
